.config/VSCodium/logs/20250429T153642/window1/exthost/output_logging_20250429T153644/1-Code.log
[Running] cd "/home/vmdjavem/Documents/rf/src/" && rustc main.rs && "/home/vmdjavem/Documents/rf/src/"main
Hello, world!

[Done] exited with code=0 in 0.211 seconds

[Running] cd "/home/vmdjavem/Documents/rf/src/" && rustc main.rs && "/home/vmdjavem/Documents/rf/src/"main
the value of x is 5
the value of x is 6

[Done] exited with code=0 in 0.094 seconds

[Running] cd "/home/vmdjavem/Documents/rf/src/" && rustc main.rs && "/home/vmdjavem/Documents/rf/src/"main
error[E0384]: cannot assign twice to immutable variable `x`
 --> main.rs:4:5
  |
2 |     let x = 5;
  |         - first assignment to `x`
3 |     println!("the value of x is {x}");
4 |     x = 6;
  |     ^^^^^ cannot assign twice to immutable variable
  |
help: consider making this binding mutable
  |
2 |     let mut x = 5;
  |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0384`.

[Done] exited with code=1 in 0.025 seconds

[Running] cd "/home/vmdjavem/Documents/rf/src/" && rustc main.rs && "/home/vmdjavem/Documents/rf/src/"main
the value of x is 5
the value of x is 6

[Done] exited with code=0 in 0.087 seconds

[Running] cd "/home/vmdjavem/Documents/rf/src/" && rustc main.rs && "/home/vmdjavem/Documents/rf/src/"main
the value of x is 5
the value of x is 6

[Done] exited with code=0 in 0.082 seconds

[Running] cd "/home/vmdjavem/Documents/rf/src/" && rustc main.rs && "/home/vmdjavem/Documents/rf/src/"main
the value of x is 5
the value of x is 6

[Done] exited with code=0 in 0.088 seconds

